<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent" android:id="@+id/coordinator">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <TextView
                android:text="@string/points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/points_title_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="@drawable/border_bg" android:layout_marginStart="76dp"/>
        <TextView
                android:text="@string/how_do_i_get_more_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/subTitle"
                app:layout_constraintTop_toBottomOf="@+id/points_title_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"
                android:textSize="19sp"
                android:textStyle="italic"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/points_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/subTitleInfo"
                android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subTitle"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@android:color/black" android:layout_marginStart="16dp"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:background="#FBE9E7"
                      app:layout_constraintTop_toBottomOf="@+id/subTitleInfo"
                      android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                      android:id="@+id/linearLayout">
            <TextView android:layout_width="wrap_content" android:layout_height="0dp"
                      android:textSize="12sp"
                      android:textColor="@android:color/black"
                      android:layout_weight="2"
                      android:layout_marginBottom="20dp"
                      android:text="@string/step_1"/>
            <TextView android:layout_width="wrap_content" android:layout_height="0dp"
                      android:textSize="12sp"
                      android:layout_marginBottom="3dp"
                      android:textColor="@android:color/black"
                      android:layout_weight="2"
                      android:text="@string/step_2"/>

            <TextView android:layout_width="wrap_content" android:layout_height="0dp"
                      android:textSize="12sp"
                      android:layout_marginBottom="3dp"
                      android:textColor="@android:color/black"
                      android:layout_weight="1"
                      android:text="@string/step_3"/>

            <TextView android:layout_width="wrap_content" android:layout_height="0dp"
                      android:textSize="12sp"
                      android:layout_marginBottom="10dp"
                      android:textColor="@android:color/black"
                      android:layout_weight="1"
                      android:text="@string/step_4"/>

            <ImageView android:layout_width="match_parent" android:layout_height="99dp"
                       android:layout_marginTop="10dp" android:contentDescription="@string/social_distancing_poster"
                       android:src="@drawable/social_distancing_poster"
                       android:layout_weight="1"
                       app:srcCompat="@drawable/social_distancing_poster"
                       android:scaleType="fitCenter" android:cropToPadding="true" android:adjustViewBounds="true"/>

            <TextView android:layout_width="wrap_content" android:layout_height="0dp"
                      android:textSize="12sp"
                      android:layout_marginTop="20dp"
                      android:textColor="@android:color/black"
                      android:layout_weight="1"
                      android:text="@string/credits_poster"/>
        </LinearLayout>

        <TextView
                android:text="@string/query_leaderboard"
                android:layout_width="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:layout_height="wrap_content" android:id="@+id/registerQuery"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_marginTop="24dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerLeaderboard"
                app:layout_constraintTop_toBottomOf="@id/registerQuery"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/register_sign"
                android:textColor="@android:color/black"
                android:background="#ffebee"
                android:textStyle="bold"
                android:layout_marginStart="56dp" android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>