<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/bluetooth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bluetooth_title"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
    <TextView
            android:text="@string/bluetooth_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/bluetooth_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView2" app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/start_connecting" android:textSize="15sp"
            android:textColor="@android:color/black" android:id="@+id/connect_btn"
            android:layout_marginTop="44dp" android:layout_marginStart="16dp"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp" android:src="@drawable/info_icon_fg"
            android:id="@+id/info"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:contentDescription="@string/problem_button"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="409dp"
            android:layout_height="521dp"
            app:layout_constraintTop_toBottomOf="@+id/connect_btn" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/connections_view">
    </androidx.recyclerview.widget.RecyclerView>
    <TextView
            android:text="@string/finding_connections"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_height="wrap_content" android:id="@+id/empty_alert"
            app:layout_constraintStart_toEndOf="@+id/connect_btn" android:layout_marginStart="12dp"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/connections_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>