<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/the_social_distance_map"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_height="wrap_content" android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/select_home_address"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/selectAddress"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/enter_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/locButton"
            app:layout_constraintStart_toStartOf="@+id/selectAddress"
            android:layout_marginStart="216dp" app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="28dp"/>
    <EditText
            android:layout_width="366dp"
            android:layout_height="49dp"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:hint="@string/insert_home_address_here"
            android:id="@+id/address"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/selectAddress"
            android:layout_marginTop="40dp" app:layout_constraintEnd_toEndOf="parent" android:autofillHints=""
            app:layout_constraintHorizontal_bias="0.444"/>
    <org.osmdroid.views.MapView android:id="@+id/mapView"
                                android:layout_width="@dimen/map_width"
                                app:layout_constraintLeft_toLeftOf="parent"

                                android:layout_height="@dimen/map_height" android:layout_marginBottom="124dp"
                                app:layout_constraintTop_toBottomOf="@+id/address">
    </org.osmdroid.views.MapView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/miles"
              android:textSize="18sp"
              android:textColor="@android:color/black"

              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" android:text="@string/test_miles"
              android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>