<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:background="#e3f2fd"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:textColor="@android:color/black" android:textSize="20sp"
            android:textStyle="bold|italic" android:fontFamily="sans-serif-smallcaps"/>
    <TextView
            android:text="@string/leadershipDesc"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content" android:id="@+id/leadershipDesc"
            app:layout_constraintTop_toBottomOf="@+id/registerText" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="#424242"/>
    <TextView
            android:text="@string/username_prompt"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:labelFor="@id/usernameText"
            android:layout_height="wrap_content" android:id="@+id/usernamePrompt"
            android:textColor="@android:color/black" android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/leadershipDesc" android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/optional_desc_prompt"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:labelFor="@id/descText"
            android:layout_height="wrap_content" android:id="@+id/descPrompt"
            android:textColor="@android:color/black" android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/usernamePrompt" android:layout_marginTop="48dp"/>
    <TextView
            android:text="@string/fav_hex_color_prompt"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content" android:id="@+id/colorPrompt"
            android:textColor="@android:color/black" android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descPrompt" android:layout_marginTop="168dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="13"
            android:id="@+id/usernameText"
            app:layout_constraintStart_toEndOf="@+id/usernamePrompt"
            app:layout_constraintTop_toBottomOf="@+id/leadershipDesc" android:layout_marginTop="28dp"
            android:textColor="@android:color/black" android:layout_marginStart="32dp"
            android:autofillHints="username"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/sample_hex_color"
            android:id="@+id/colorText"
            app:layout_constraintStart_toEndOf="@+id/colorPrompt"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            android:textColor="@android:color/black"
            android:autofillHints="" android:layout_marginStart="24dp" android:layout_marginTop="204dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:lines="3"
            android:ems="15"
            android:id="@+id/descText"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/descPrompt"
            android:layout_marginTop="12dp" android:layout_marginStart="4dp" android:inputType="textMultiLine"/>
    <Button
            android:text="@string/submit_leaderboard"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_height="wrap_content" android:id="@+id/submitLeaderboard"
            android:textColor="@android:color/black" android:textSize="15sp"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/colorPrompt"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>