<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent" android:layout_height="wrap_content"
                                                   android:id="@+id/rssCard"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   app:cardElevation="4dp"
                                                   app:cardCornerRadius="4dp"
                                                   app:cardBackgroundColor="#FFF9C4"
                                                   app:layout_constraintLeft_toLeftOf="parent"
                                                   android:layout_marginTop="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content" >

        <ImageButton android:layout_width="150dp" android:layout_height="124dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     android:src="@drawable/social_distancing_poster" android:contentDescription="@string/rss_icon"
                     android:layout_marginTop="8dp" android:id="@+id/image" android:background="@drawable/black_border"
                     android:scaleType="fitXY" android:cropToPadding="true" android:adjustViewBounds="true"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintLeft_toRightOf="@id/image"
                  android:layout_marginTop="16dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_weight="1"
                  android:ellipsize="none"
                  android:maxLines="100"
                  android:scrollHorizontally="false"
                  android:textColor="@android:color/black" android:textSize="12sp"
                  android:text="@string/crown_catch_news" android:id="@+id/header" android:layout_marginStart="4dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/image"
                  android:id="@+id/source"
                  android:textStyle="italic"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:textColor="@android:color/black" android:textSize="14sp" android:text="@string/sample_rss"
                  android:layout_marginStart="16dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/hours_ago"
                  app:layout_constraintLeft_toRightOf="@id/source"
                  android:layout_marginTop="132dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:textColor="@android:color/black" android:textSize="14sp" android:text="@string/_2_hours_ago"
                  android:layout_marginStart="52dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



